# jdkman

./: Cargo.toml  README.md  README_zh-CN.md
.github/workflows/: release.yml
locales/: en-US.yml  zh-CN.yml
src/: main.rs
